# build-your-own-redis

./: .gitignore  Makefile  README.md  course-definition.yml  starter-definitions.yml  starter-repository-definitions.yml  sweep.yaml
.cursor/: environment.json
.github/: test-course-definition.yml
compiled_starters/rust/: Cargo.toml  README.md  codecrafters.yml  your_program.sh
compiled_starters/rust/.codecrafters/: run.sh
compiled_starters/rust/src/: main.rs
course_definition_tester/: Makefile  package-lock.json
dockerfiles/: bun-1.1.Dockerfile  bun-1.2.Dockerfile  bun-1.3.Dockerfile  c-23.Dockerfile  clojure-0.Dockerfile  clojure-1.10.3.Dockerfile  clojure-1.11.3.Dockerfile  clojure-1.12.0.Dockerfile  cpp-20.Dockerfile  cpp-23.Dockerfile  crystal-1.1.Dockerfile  crystal-1.12.Dockerfile  crystal-1.5.Dockerfile  deno-1.42.Dockerfile  dotnet-10.0.Dockerfile  dotnet-6.0.Dockerfile  dotnet-8.0.Dockerfile  dotnet-9.0.Dockerfile  elixir-1.16.Dockerfile  elixir-1.18.Dockerfile  elixir-1.19.Dockerfile  gleam-1.0.Dockerfile  gleam-1.11.Dockerfile  gleam-1.13.Dockerfile  gleam-1.14.Dockerfile  gleam-1.16.Dockerfile  gleam-1.4.Dockerfile  gleam-1.6.Dockerfile  gleam-1.9.Dockerfile  go-1.19.Dockerfile  go-1.21.Dockerfile  go-1.22.Dockerfile  go-1.24.Dockerfile  go-1.25.Dockerfile  go-1.26.Dockerfile  haskell-8.8.Dockerfile  haskell-9.0.Dockerfile  haskell-9.2.Dockerfile  haskell-9.4.Dockerfile  haskell-9.8.Dockerfile  (+62 more)
solutions/cpp/02-rg2/code/: CMakeLists.txt  codecrafters.yml  your_program.sh
solutions/cpp/02-rg2/code/src/: Server.cpp  main.cpp
solutions/ocaml/02-rg2/code/: codecrafters.yml  dune-project  your_program.sh
solutions/ocaml/02-rg2/code/src/: main.ml
source_walkthroughs/: init.md
stage_descriptions/: aof-01-uj3.md  aof-02-vd9.md  aof-03-fm0.md  aof-04-dw4.md  aof-05-pb9.md  aof-06-dc8.md  aof-07-fi1.md  aof-08-ep6.md  aof-09-xz2.md  aof-10-kn2.md  aof-persistence-01-uj3.md  aof-persistence-02-vd9.md  aof-persistence-03-fm0.md  aof-persistence-04-dw4.md  aof-persistence-05-dc8.md  aof-persistence-05-pb9.md  (+230 more)
starter_templates/cpp/: .gitignore  CMakeLists.txt  config.yml  spawn_redis_server.sh
starter_templates/cpp/code/: .gitignore  spawn_redis_server.sh  vcpkg-configuration.json  vcpkg.json
starter_templates/cpp/code/.codecrafters/: run.sh
starter_templates/cpp/code/src/: main.cpp
starter_templates/cpp/src/: Server.cpp
(+958 files in other folders)
